--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.10.0
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+distro==1.9.0
 filetype==1.2.0
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
@@ -14,17 +15,20 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+jiter==0.11.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.27
 langchain-core==0.3.76
 langchain-google-genai==2.1.10
+langchain-openai==0.3.33
 langchain-text-splitters==0.3.11
 langgraph==0.6.7
 langgraph-checkpoint==2.1.1
 langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.6
 langsmith==0.4.28
+openai==1.108.0
 orjson==3.11.3
 ormsgpack==1.10.0
 packaging==25.0
@@ -41,6 +45,7 @@ pyobjc-framework-Cocoa==11.1
 pyobjc-framework-CoreText==11.1
 pyobjc-framework-Quartz==11.1
 PyYAML==6.0.2
+regex==2025.9.1
 requests==2.32.5
 requests-toolbelt==1.0.0
 rsa==4.9.1
@@ -48,6 +53,8 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 tenacity==9.1.2
+tiktoken==0.11.0
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
